# ComfyUI-CoreVideoMocks

./: LICENSE  Mock Video Workflows.json  Simple Video Workflow Mock.json  nodes.py  pyproject.toml  readme.md
.github/workflows/: publish.yml
